@@ -1,5 +1,6 @@
-package com.example.onlinecourses.specifications;
+package com.example.onlinecourses.configs.impls;
 
+import com.example.onlinecourses.models.OauthProvider;
 import com.example.onlinecourses.models.Role;
 import lombok.Data;
 import org.springframework.security.core.GrantedAuthority;
@@ -8,7 +9,6 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Data
 public class UserDetailsImpl implements UserDetails {
@@ -18,13 +18,14 @@ public class UserDetailsImpl implements UserDetails {
     private final String username;
     private final String password;
     private final boolean isActive;
+    private final Set<OauthProvider> oauthProviders;
     private final Set<Role> roles;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return roles.stream()
             .map(role -> new SimpleGrantedAuthority(role.getName()))
-            .collect(Collectors.toList());
+            .toList();
     }
     @Override
     public String getPassword() {
